--- a/baselib/src/main/res/layout/base_layout_place_holder.xml
+++ b/baselib/src/main/res/layout/base_layout_place_holder.xml
@@ -27,7 +27,6 @@
 
 
         <TextView
-            android:visibility="gone"
             android:id="@+id/tvErrorRetry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,7 +38,8 @@
             android:paddingBottom="10dp"
             android:text="点击重试"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:visibility="gone" />
 
 
     </LinearLayout>
@@ -75,7 +75,8 @@
 
         <ProgressBar
             android:layout_width="42dp"
-            android:layout_height="42dp" />
+            android:layout_height="42dp"
+            android:indeterminateTint="?attr/colorPrimary" />
 
         <TextView
             android:id="@+id/tvLoading"
