--- a/baselib/src/main/res/drawable/base_shape_btn_error_retry.xml
+++ b/baselib/src/main/res/drawable/base_shape_btn_error_retry.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    android:shape="rectangle"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
 
-    <corners android:radius="32dp"/>
+    <corners android:radius="32dp" />
 
-    <solid android:color="@color/colorPrimary"/>
+    <solid android:color="?attr/colorPrimary" />
 
 
 </shape>
