更新了titlebar的相关api

--- a/app/src/main/res/layout/holder_netgo.xml
+++ b/app/src/main/res/layout/holder_netgo.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="6dp"
-    android:foreground="?android:selectableItemBackgroundBorderless">
+    android:foreground="?attr/selectableItemBackgroundBorderless">
 
     <TextView
         android:id="@+id/textView"
