--- a/baselib/src/main/res/layout/base_fragment_page.xml
+++ b/baselib/src/main/res/layout/base_fragment_page.xml
@@ -1,33 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <!--顶部容器-->
-    <LinearLayout
+    <include
         android:id="@+id/toolBarContainer"
+        layout="@layout/base_layout_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:orientation="vertical"
-        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible">
-
-        <!--状态栏-->
-        <View
-            android:id="@+id/statusView"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_25" />
-
-        <!--ToolBar-->
-        <include layout="@layout/base_layout_toolbar" />
-
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!--内容容器-->
     <FrameLayout
